@@ -1,3 +1,7 @@
+29 Jan 2007
+   [Alexey]
+   - Introduced search in log files
+
 25 Jan 2007
    [Pragma]
    - Yet more Qt 4.x port
